# tool_use_with_xml

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  stream.rs  stream_to_stream.rs
