[package]
name = "tool_use_with_xml"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio-stream = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
rstest = "0.25"
pretty_assertions = "1.0"

[[bin]]
name = "tool_use_with_xml"
path = "src/main.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

[[bin]]
name = "stream_to_stream"
path = "src/stream_to_stream.rs"
